--- a/index.html
+++ b/index.html
@@ -1,19 +1,50 @@
 <!doctype html>
 <html>
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.tailwindcss.com"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Cormorant+Upright:wght@400;700&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Cormorant+Upright:wght@400;700&family=Open+Sans:wght@400;700&display=swap"
+    rel="stylesheet">
   <style>
     body {
       font-family: 'Cormorant Upright', serif;
     }
+
+    .open-sans {
+      font-family: 'Open Sans', sans-serif;
+    }
   </style>
 </head>
-<body>
-  <h1 class="text-3xl font-bold underline">
-    Hello world!
-  </h1>
+
+<body class="bg-black text-white">
+  <!-- nav starts -->
+  <nav class="flex justify-between items-center px-[120px] py-[32px]">
+    <!-- logo -->
+    <div class="w-[199px] h-[57px]">
+      <img src="logo.png" alt="" class="w-full h-full">
+    </div>
+    <!-- midsection -->
+    <div class="flex gap-[32px] open-sans text-[16px] leading-[28px] tracking-[4%]">
+      <h1>HOME</h1>
+      <h1>PAGES</h1>
+      <h1>CONTACT US</h1>
+      <h1>BLOG</h1>
+      <h1>LANDING</h1>
+     
+    </div>
+    <!-- last -->
+    <div class=" open-sans font-semibold text-base leading-[28px] tracking-[5%] flex gap-6">
+      <h1>Login/Registration</h1>
+      <div class="border border-1 border-white">  
+      </div>
+      <h1>Book Table</h1>
+    </div>
+  </nav>
+  <!-- nav end here -->
+
 </body>
+
 </html>
