--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@
     </div>
     <!-- midsection -->
     <div class="flex gap-[32px] open-sans text-[16px] leading-[28px] tracking-[4%]">
-      <h1>HOME</h1>
-      <h1>PAGES</h1>
-      <h1>CONTACT US</h1>
-      <h1>BLOG</h1>
-      <h1>LANDING</h1>
+      <h1 class="hover hover:font-bold hover:border hover:border-1">HOME</h1>
+      <h1 class="hover hover:font-bold hover:border hover:border-1">PAGES</h1>
+      <h1 class="hover hover:font-bold hover:border hover:border-1">CONTACT US</h1>
+      <h1 class="hover hover:font-bold hover:border hover:border-1">BLOG</h1>
+      <h1 class="hover hover:font-bold hover:border hover:border-1">LANDING</h1>
 
     </div>
     <!-- last -->
     <div class=" open-sans font-semibold text-base leading-[28px] tracking-[5%] flex gap-6">
-      <h1>Login/Registration</h1>
+      <h1 class="hover hover:font-bold hover:border hover:border-1">Login/Registration</h1>
       <div class="border border-1 border-white">
       </div>
-      <h1>Book Table</h1>
+      <h1 class="hover hover:font-bold hover:border hover:border-1">Book Table</h1>
     </div>
   </nav>
   <!-- nav end here -->
