--- a/index.html
+++ b/index.html
@@ -114,13 +114,13 @@
    
    </div>
    <!-- 3 portion -->
-    <div class="mt-[128px] ml-[365px] mr-[255px] h-[970px]">
+    <div class="mt-[128px] ml-[365px] mr-[255px]  mb-[20px]">
       <div class="space-y-4">
         <p class="font-extrabold text-[23px] leading-[29.9px] tracking-[0.04em] text-center">Menu that fits you palatte</p>
         <img src="Vector.svg" alt="" class="mx-auto ">
         <h1 class="font-semibold text-[64px] leading-[83.2px] tracking-[0.04em] text-center  decoration-skip-ink-none text-[#DCCA87]">Today’s Special</h1>
       </div>
-      <div class="pt-[64px] flex w-full justify-between">
+      <div class="pt-[64px] flex w-full justify-between border-2">
         <div class="space-y-10">
           <h1 class="font-semibold text-[45px] leading-[58.5px] tracking-[0.04em]">Wine & Beer</h1>
         
