--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
   <!-- nav end here -->
   <!-- main section  -->
   <div class="mt-[48px] mx-[310px] h-[736px] flex">
-    <div class="w-1/2 pr-[180px] my-auto">
-      <p class="font-bold text-[23px] leading-[29.9px] tracking-[4%]">Chase The New Flavour</p>
+    <div class="w-1/2 pr-[180px] my-auto cursor-pointer">
+      <p class="font-bold text-[23px] leading-[29.9px] tracking-[4%] cursor-pointer">Chase The New Flavour</p>
       <img src="Vector.svg" alt="" class="w-[40px] h-[9px] rotation-[-90deg]">
       <h1 class="font-[Cormorant_Upright] font-bold text-[90px] leading-[117px] tracking-[4%] text-[#DCCA87]">
         The Key To Fine Dining
