--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
 
   <!-- 2 portion -->
-  <div class="w-full bg-[#0C0C0C] mt-[152px] relative ">
+  <div class="w-full bg-[#0C0C0C] mt-[152px] relative cursor-pointer">
     <div class="mx-[310px] mt-[128px] flex gap-[85px] mb-[128px] relative  z-20 ">
       <div class="my-auto flex flex-col gap-8 items-end">
         <h1 class="font-semibold text-[64px] leading-[83.2px] tracking-[0.03em] text-right text-[#DCCA87]">About Us</h1>
