--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
     </div>
   </div>
   <!-- portion 7 -->
-  <div class="mx-[310px] mt-[120px] flex">
+  <div class="mx-[310px] mt-[120px] flex mb-[128px]">
     <div class="w-1/2 my-auto">
     <div>
       <p class="font-bold text-[23px] leading-[29.9px] tracking-[4%] pb-[5px]">Contact</p>
@@ -404,7 +404,24 @@
 
     </div>
   </div>
-     
+     <!-- portion 8 -->
+      <div>
+        <div class="pt-[64px] px-[570px] flex flex-col items-center">
+          <p class="text-center font-semibold text-[23px] leading-[30px] tracking-[4%]">Newsletter</p>
+          <img src="Vector.svg" alt="" class="mt-2">
+          <h1 class="font-semibold text-[64px] leading-[83.2px] tracking-[3%] text-[#DCCA87]">Subscribe to Our Newsletter</h1>
+          <p class="pt-[24px] open-sans">And never miss latest Updates!</p>
+          <input 
+  type="email" 
+  placeholder="Enter email" 
+  class="px-4 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
+/>
+
+        </div>
+
+
+        </div>
+      </div>
     
   
 
