--- a/index.html
+++ b/index.html
@@ -411,17 +411,18 @@
           <img src="Vector.svg" alt="" class="mt-2">
           <h1 class="font-semibold text-[64px] leading-[83.2px] tracking-[3%] text-[#DCCA87]">Subscribe to Our Newsletter</h1>
           <p class="pt-[24px] open-sans">And never miss latest Updates!</p>
-          <input 
-  type="email" 
-  placeholder="Enter email" 
-  class="px-4 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
-/>
+          <div class="flex">
+            <input 
+            type="email" 
+            placeholder="Enter email" 
+            class="px-4 py-2 border border-gray-300 bg-black rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500 w-[625px] mt-[64px]"/>
+          </div>
+          
 
         </div>
 
 
         </div>
-      </div>
     
   
 
