--- a/index.html
+++ b/index.html
@@ -411,13 +411,45 @@
           <img src="Vector.svg" alt="" class="mt-2">
           <h1 class="font-semibold text-[64px] leading-[83.2px] tracking-[3%] text-[#DCCA87]">Subscribe to Our Newsletter</h1>
           <p class="pt-[24px] open-sans">And never miss latest Updates!</p>
-          <div class="flex">
+          <div class="flex justify-center gap-4">
             <input 
             type="email" 
             placeholder="Enter email" 
-            class="px-4 py-2 border border-gray-300 bg-black rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500 w-[625px] mt-[64px]"/>
+            class="px-4 py-[16px] border border-yellow-300 bg-black focus:outline-none focus:ring-2  w-[625px] my-[64px]"/>
+            <button class="w-[157px] h-[44px] bg-[#DCCA87] px-[32px] py-[8px] mt-[70px]">
+              <p class="font-bold text-[16px] leading-[28px] tracking-[4%] text-black ">
+                Subscribe
+              </p>
+            </button>
           </div>
           
+
+        </div>
+        <div class="py-[128px]">
+          <div class="mx-[284px] p-4 flex justify-between">
+            <div class="flex flex-col items-center gap-2">
+              <h1 class="text-[#DCCA87] text-[32px] font-semibold leading-[41.6px] tracking-[4%]">Contact Us</h1>
+              <p class="open-sans text-[#AAAAAA] pt-[24px]">9 W 53rd St, New York, NY 10019, USA</p>
+              <p class="open-sans text-[#AAAAAA] pt-[8px]">+1 212-344-1230</p>
+              <p class="open-sans text-[#AAAAAA]">+1 212-555-1230</p>
+            </div>
+            <div class=" flex flex-col items-center gap-2">
+              <img src="Gerícht.png" alt="">
+              <p class="pt-[32px] open-sans font-normal text-[16px] leading-[28px] tracking-[4%] text-center text-[#FFFFFF]">"The best way to find yourself is to lose yourself in the service of others.”</p>
+              <img src="Vector.svg" alt="" class="py-[16px]">
+              <img src="Social media.png" alt="">
+
+            </div>
+            <div>
+                <div class="flex flex-col items-center gap-2">
+                  <h1 class="text-[#DCCA87] text-[32px] font-semibold leading-[41.6px] tracking-[4%]">Contact Us</h1>
+                  <p class="open-sans text-[#AAAAAA] pt-[24px]">9 W 53rd St, New York, NY 10019, USA</p>
+                  <p class="open-sans text-[#AAAAAA] pt-[8px]">+1 212-344-1230</p>
+                  <p class="open-sans text-[#AAAAAA]">+1 212-555-1230</p>
+                </div>
+            </div>
+
+          </div>
 
         </div>
 
